agregado de funciones y dealle del simulador en HTML

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Primer Entrega Débora Lattanzi</title>
 </head>
 <body>
+    <h3>Bienvenido/a a Farmacia Social</h3>
+    <p>
+        Este proyecto es la simulación de un turnero de una Farmacia, que dependiendo de las opciones que el usuario elija,
+        determinará el turno que debe ser asignado a la persona que se encarga de atender a la brevedad.
+    </p>
+
     <script src="main.js"></script>
 </body>
 </html>
