--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primer Entrega Débora Lattanzi</title>
+    <title>Segunda Entrega Débora Lattanzi</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+
 </head>
 <body>
-    <h3>Bienvenido/a a Farmacia Social</h3>
-    <p>
-        Este proyecto es la simulación de un turnero de una Farmacia, que dependiendo de las opciones que el usuario elija,
-        determinará el turno que debe ser asignado a la persona que se encarga de atender a la brevedad.
-    </p>
-
+    <div class="container">
+        <h2>Bienvenido/a a Farmacia Social</h2>
+        <label for="nombre">Ingrese su Nombre y Apellido</label>
+        <input type="text" id="nombre" name="nombre">
+        <button type="button" onclick="saludar()">Saludar</button>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
