--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <div class="container">
         <h2>Bienvenido/a a Farmacia Social</h2>
         <label for="nombre">Ingrese su Nombre y Apellido</label>
-        <input type="text" id="nombre" name="nombre">
+        <input type="text" id="nombre" placeholder="Nombre y Apellido">
         <button type="button" class="btn btn-primary" onclick="saludar()">Ingresar</button>
         
         <div id="mensaje"></div>
