agregado de evento a main para nosotos.html

--- a/nosotros.html
+++ b/nosotros.html
@@ -10,7 +10,7 @@
     <div class="imagen-container">
         <img src="./imagenes/imagen farmacia.jpg" alt="Farmacia Social" width="100%">
         <div class="texto">
-            <h1>Quienes somos</h1>
+            <h1 id="titulo-nosotros">Quienes somos...</h1>
             <p>"Somos una empresa farmacéutica comprometida con la salud y el bienestar de las personas. Desde nuestros inicios, nos hemos dedicado a ofrecer
                 productos de alta calidad, apoyados por la ciencia y la innovación, para satisfacer las necesidades de nuestros clientes. Con un equipo de 
                 profesionales altamente capacitados, nos esforzamos por brindar soluciones efectivas en el ámbito de la salud, priorizando siempre la 
@@ -23,5 +23,6 @@
                 a nuestras comunidades y trabajando para un futuro más saludable y prometedor."</p>
         </div>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
